--- a/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
@@ -132,9 +132,9 @@
                 <UserControls:IngredientAutoComplete SelectItemCommand="{Binding SaveNewGreyedIngredientNameCommand}" MaximumItems="5" Grid.Row="3" Grid.ColumnSpan="2" Margin="0,0,200,0"/>
                 <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.ColumnSpan="2">
                     <TextBlock Text="Rating: "/>
-                    <TextBlock Text="{Binding GreyListInventoryIngredient.IngredientValue}"  FontSize="13" FontStyle="Oblique"/>
+                    <TextBlock Text="{Binding ElementName=ratingSlider, Path=Value}"  FontSize="13" FontStyle="Oblique"/>
                 </StackPanel>
-                <Slider Name="ratingSlider"  Grid.Row="5" Minimum="0" Maximum="100" Value="{Binding GreyListInventoryIngredient.IngredientValue, Mode=TwoWay}" SelectionStart="1" Grid.ColumnSpan="3"/>
+                <Slider Name="ratingSlider"  Grid.Row="5" Minimum="0" Maximum="100" Value="{Binding IngredientValue, Mode=TwoWay}" SelectionStart="1" Grid.ColumnSpan="3"/>
                 <Label Content="{Binding Path=RatedDublicate}" Grid.Row="6" Grid.Column="1" Foreground="Red"/>
                 <Button Style="{StaticResource ButtonIconTemplate}" Command="{Binding AddNewGreydIngredientCommand}" Grid.Row="6" Grid.Column="2">
                     <Button.Background>
