--- a/FoodPlanner/FoodPlanner/MainWindow.xaml
+++ b/FoodPlanner/FoodPlanner/MainWindow.xaml
@@ -22,6 +22,6 @@
         </Grid.RowDefinitions>
 
         <Frame x:Name="Frame" Grid.Row="0" NavigationUIVisibility="Hidden"/>
-        <UserControls:SlidePanel Grid.Row="1"/>
+        <UserControls:NavigationBar Grid.Row="1"/>
     </Grid>
 </Window>
