--- a/FoodPlanner/FoodPlanner/UserControls/NavigationBar.xaml
+++ b/FoodPlanner/FoodPlanner/UserControls/NavigationBar.xaml
@@ -7,7 +7,7 @@
     xmlns:system="clr-namespace:System;assembly=mscorlib"
 	xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions" xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
 	mc:Ignorable="d"
-	x:Class="FoodPlanner.UserControls.SlidePanel"
+	x:Class="FoodPlanner.UserControls.NavigationBar"
 	x:Name="UserControl"
 	d:DesignWidth="405" d:DesignHeight="40">
 
